# externalip-manager

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.multiarch  Justfile  README.md
.github/workflows/: ci.yml  version-maintenance.yml
crates/crd-exporter/: Cargo.toml
crates/crd-exporter/src/: main.rs
crates/manager/: Cargo.toml
crates/manager/src/: error.rs  events.rs  lib.rs
crates/manager/src/crd/v1alpha1/: mod.rs
crates/manager/src/external_ip_source/: mod.rs  registry.rs  source.rs
crates/manager/src/external_ip_source/solvers/: dns_hostname.rs  interface.rs  load_balancer_ingress.rs  merge.rs  mod.rs  static.rs
crates/manager/src/external_ip_source/solvers/ip_api/: mod.rs  provider_ipify.rs  provider_myip.rs  solver.rs
crates/manager/src/ip_source/: mod.rs  registry.rs  source.rs
crates/manager/src/ip_source/solvers/: dns_hostname.rs  load_balancer_ingress.rs  merge.rs  mod.rs  static.rs
crates/manager/src/ip_source/solvers/ip_api/: errors.rs  ipify.rs  mod.rs  my_ip.rs  solver.rs
crates/manager/src/ip_source/sources/: dns_hostname.rs  mod.rs
crates/manager/src/ip_source/sources/ip_solver/: my_ip.rs
crates/manager/src/svc/: mod.rs
crds/v1alpha1/: v1alpha1-ClusterExternalIPSource.yaml
docs/examples/: clusterExternalIpSource.yaml
test/manifests/: merge.yaml
