[workspace]
members = ["crates/manager", "crates/bin", "crates/crd-exporter"]
resolver = "2"

[workspace.package]
authors = ["Max Hösel <github@maxhoesel.de>"]
license-file = "LICENSE"
description = "Manage ExternalIP assignments on Kubernetes Services"
version = "0.2.1"
edition = "2024"

[profile.release]
# extra bit of safety
overflow-checks = true
