[package]
name = "externalip-manager-crd-exporter"
version = "0.2.0"
edition = "2021"
description = "Utility crate to generate YAMLs for externalip-managers CRDs"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
externalip-manager-manager = { path = "../manager" }
serde_yaml = "0.9.34"
kube = { version = "0.99.0", features = ["runtime", "derive"] }
# Not actually used, just needed to get k8s_openapi to compile
k8s-openapi = { version = "0.24.0", features = ["schemars", "v1_28"] }
anyhow = "1.0.95"
