[package]
name = "externalip-manager-manager"
version = "0.5.1"
edition = "2024"
description = "Main ExternalIP Operator Library"


[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "charset",
    "json",
] }
async-trait = "0.1.86"
hickory-resolver = "0.25.0"
itertools = "0.14.0"
k8s-openapi = { version = "0.27.0", features = ["schemars"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
schemars = "1.0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.100"
# we do enable a specific version for dev, so that tests can run
k8s-openapi = { version = "0.27.0", features = ["schemars", "v1_30"] }
