[package]
name = "externalip-manager-manager"
version = "0.5.1"
edition = "2024"
description = "Main ExternalIP Operator Library"


[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = [
    "rustls",
    "http2",
    "charset",
    "json",
] }
async-trait = "0.1.89"
hickory-resolver = "0.25.2"
itertools = "0.14.0"
k8s-openapi = { version = "0.27.1", features = ["schemars"] }
kube = { version = "3.1.0", features = ["runtime", "derive"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
anyhow = "1.0.102"
# we do enable a specific version for dev, so that tests can run
k8s-openapi = { version = "0.27.1", features = ["schemars", "v1_31"] }
